# LiquidRocketMDO

./: README.md  main.py  pyproject.toml
components/: PropulsionComp.py  TrajectoryComp.py
src/liquidrocketmdo/components/: __init__.py
