[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liquid-rocket-mdo"
version = "0.1.0"
description = "Multidisciplinary Design Optimization of a liquid rocket using OpenMDAO and RocketPy"
authors = [
    { name = "Django van der Plas", email = "propulsion@dare.tudelft.nl" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]

dependencies = [
  "openmdao~=3.41.0",
  "rocketpy~=1.10.0",
  "numpy~=2.3.2",
  "rocketcea~=1.2.1",
  "ambiance~=1.3.1"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["liquidrocketmdo*"]
